Fix horizontal scrollbar

--- a/styles/home.css
+++ b/styles/home.css
@@ -28,7 +28,7 @@ h2 {
 
 header {
     height: 60px;
-    width: 100vw;
+    width: 100%;
 }
 
 .header-links {
